# ocx-common

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  Makefile  environment.yaml  environment.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: python-publish.yaml
_modules/: index.html
_modules/ocx_common/: interfaces.html  utilities.html
_modules/ocx_common/clients/: clients.html
_modules/ocx_common/decorators/: decorators.html
_modules/ocx_common/interfaces/: interfaces.html
_modules/ocx_common/loader/: loader.html
_modules/ocx_common/parser/: parsers.html
_modules/ocx_common/utilities/: utilities.html
_modules/ocx_common/x_path/: x_path.html
docs/: conf.py  modules.rst  requirements.txt
ocx_common/: __init__.py  interfaces.py  utilities.py
ocx_common/clients/: clients.py  wiki_client.py  wiki_struct_data.py
ocx_common/decorators/: decorators.py
ocx_common/interfaces/: interfaces.py
ocx_common/loader/: loader.py
ocx_common/lxml_wrapper/: xelement.py
ocx_common/ocx_query/: __init__.py  query.py
ocx_common/parser/: parsers.py  xml_document_parser.py
ocx_common/serializer/: serializer.py
ocx_common/utilities/: downloader.py  ocx_xml.py  source_validator.py  utilities.py
ocx_common/x_path/: x_path.py  xelement.py
tests/: conftest.py  test_downloader.py  test_loader.py  test_lxmlelement.py  test_ocx_path.py  test_ocx_path_builder.py  test_parsers.py  test_query.py  test_rest_client.py  test_source_validator.py  test_utilities.py  test_x_path.py  test_x_path_builder.py
tests/data/: NAPA-OCX_M1.3docx
tests/data/schemas/: OCX_Schema.json  OCX_Schema.xsd
